--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,8 @@ services:
     volumes:
     # Persist logs to a volume, so they can be accessed after the container is stopped.
       - server-logs:/app/logs
+    ports:
+      - "5000:5000"
 
   math:
     image: docker.io/compdem/polis-math:${TAG:-dev}
@@ -78,20 +80,20 @@ services:
       - "backups:/backups"
       - "postgres:/var/lib/postgresql/data"
 
-  nginx-proxy:
-    image: docker.io/compdem/polis-nginx-proxy:${TAG:-dev}
-    build:
-      context: ./file-server
-      dockerfile: nginx.Dockerfile
-      labels:
-        polis_tag: ${TAG:-dev}
-    depends_on:
-      - "server"
-    networks:
-      - "polis-net"
-    ports:
-      - ${HTTP_PORT:-80}:80
-      - ${HTTPS_PORT:-443}:443
+#  nginx-proxy:
+#    image: docker.io/compdem/polis-nginx-proxy:${TAG:-dev}
+#    build:
+#      context: ./file-server
+#      dockerfile: nginx.Dockerfile
+#      labels:
+#        polis_tag: ${TAG:-dev}
+#    depends_on:
+#      - "server"
+#    networks:
+#      - "polis-net"
+#    ports:
+#      - ${HTTP_PORT:-80}:80
+#      - ${HTTPS_PORT:-443}:443
 
   file-server:
     image: docker.io/compdem/polis-file-server:${TAG:-dev}
