--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,7 +92,9 @@ services:
     ports:
       - ${HTTP_PORT:-80}:80
       - ${HTTPS_PORT:-443}:443
-
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+  
   file-server:
     image: docker.io/compdem/polis-file-server:${TAG:-dev}
     build:
