--- a/client-report/.babelrc
+++ b/client-report/.babelrc
@@ -1,4 +1,14 @@
 {
-  "presets": ["@babel/env", "@babel/react"],
-  "plugins": [["@babel/plugin-proposal-decorators", { "legacy": true }]]
+  "presets": [
+    "@babel/env",
+    "@babel/react"
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ]
+  ]
 }
