--- a/client-report/package.json
+++ b/client-report/package.json
@@ -44,6 +44,7 @@
         "webpack-hot-middleware": "~2.25.3"
     },
     "dependencies": {
+        "chart.js": "^4.4.0",
         "color": "~4.2.3",
         "css-loader": "^6.8.1",
         "d3": "~4.6.0",
@@ -56,6 +57,7 @@
         "prop-types": "~15.8.1",
         "radium": "~0.26.2",
         "react": "~17.0.2",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "~17.0.2",
         "react-fontawesome": "~0.3.3",
         "react-redux": "~7.2.9",
