--- a/client-report/package.json
+++ b/client-report/package.json
@@ -21,6 +21,7 @@
         "@babel/preset-react": "~7.18.6",
         "autoprefixer": "^10.4.16",
         "babel-loader": "~9.1.2",
+        "daisyui": "^4.5.0",
         "es6-promise": "~1.0.0",
         "eslint": "~8.35.0",
         "eslint-plugin-react": "~7.32.2",
@@ -37,6 +38,7 @@
         "react-transform-hmr": "~1.0.4",
         "rimraf": "~2.4.5",
         "run-sequence": "~0.3.7",
+        "svg-url-loader": "^8.0.0",
         "tailwindcss": "^3.3.3",
         "webpack": "~5.74.0",
         "webpack-cli": "~4.10.0",
