--- a/client-report/package.json
+++ b/client-report/package.json
@@ -19,6 +19,7 @@
         "@babel/plugin-proposal-decorators": "~7.21.0",
         "@babel/preset-env": "~7.20.2",
         "@babel/preset-react": "~7.18.6",
+        "@types/d3": "^7.4.3",
         "autoprefixer": "^10.4.16",
         "babel-loader": "~9.1.2",
         "daisyui": "^4.5.0",
