--- a/client-report/package.json
+++ b/client-report/package.json
@@ -69,6 +69,7 @@
         "redux": "~3.0.5",
         "redux-thunk": "~1.0.3",
         "request": "~2.65.0",
+        "scroll-into-view-if-needed": "^3.1.0",
         "style-loader": "^3.3.3",
         "svg-text-wrap": "0.0.1"
     },
