--- a/file-server/nginx/nginx-ssl.site.default.conf
+++ b/file-server/nginx/nginx-ssl.site.default.conf
@@ -3,8 +3,8 @@ server {
     listen      [::]:443 ipv6only=off ssl http2;
     server_name _;
 
-    ssl_certificate /etc/letsencrypt/live/polis-kennislink.boasmedia.nl/fullchain.pem; #/etc/nginx/certs/snakeoil.cert.pem;
-    ssl_certificate_key /etc/letsencrypt/live/polis-kennislink.boasmedia.nl/privkey.pem; #/etc/nginx/certs/snakeoil.key.pem;
+    ssl_certificate /etc/letsencrypt/live/polis.nemokennislink.nl/fullchain.pem; #/etc/nginx/certs/snakeoil.cert.pem;
+    ssl_certificate_key /etc/letsencrypt/live/polis.nemokennislink.nl/privkey.pem; #/etc/nginx/certs/snakeoil.key.pem;
     ssl_session_timeout 10m;
     ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
     ssl_prefer_server_ciphers on;
